# factorio-zygote

./: CHANGELOG.md  README.md  factorio-zygote.cabal  stack.yaml
app/: Main.hs
data/blueprints/: BP Book - Alphabet - Concrete.txt  BP Book - Alphabet - Hazard Concrete.64  BP Book - Alphabet - Stone Bricks.64  BP Book - Balancers 4, 8, 16.txt  BP Book - Early Game (Starter Base, Smelters, GC).txt  BP Book - Fancy Flooring.64  BP Book - Malls.64  BP Book - Nuclear Power.txt  BP Book - Solar Arrays.txt  Balancer 16-16 By Thierry88.txt  Braians Trains.64  Construction Drones Mod.64  Furnaces - Beaconed - Late-Game.txt  Green Circuits - (Expensive, Early Game).64  Green Circuits - Bot (Expensive).txt  Green_Circuit_-_Expensive_-_Moduled_-_Bot_Mike.64  Mining - Compact, Large.txt  Mining - Compact, Small.64  Oil - Huge Pumpjack BP.txt  Rails - Diagonal (with Green Wire and Lamps)(1).64  Rails - Diagonal (with Green Wire and Lamps).64  Rails - Giant 4-lane cross - Nilaus.64  Rails - In RHD.64  Rails - Out RHD.64  Rails - Parking - 90_ Curved Section Left (x6).64  Rails - Parking - 90_ Curved Section Right (x6).64  Rails - Parking - 90_ Middle Section (6cars x6).64  Rails - Parking - Diagonal Left 6cars x6.64  Rails - Parking - Diagonal Right 6cars x6.64  Rails - Parking - Straight Left 6cars x6.64  Rails - Parking - Straight Right 6cars x6.64  Rails - Straight RHD (with Green Wire and Lamps).64  Rails - T-Junction RHD.txt  Red Circuits - (Expensive, Mid-Game).64  Station - Solar Loading.64  Station - Solar Unloading.txt  Station - Wall Repair.64  Vailla Production Blocks.64
data/blueprints/json/: BP Book - Alphabet - Concrete.json  BP Book - Alphabet - Hazard Concrete.json  BP Book - Alphabet - Stone Bricks.json  BP Book - Balancers 4, 8, 16.json  BP Book - Early Game (Starter Base, Smelters, GC).json  BP Book - Fancy Flooring.json  BP Book - Malls.json  BP Book - Nuclear Power.json  BP Book - Solar Arrays.json  Balancer 16-16 By Thierry88.json  Book: Trainstations.json  Construction Drones Mod.json  Furnaces - Beaconed - Late-Game.json  Green Circuits - (Expensive, Early Game).json  Green Circuits - Bot (Expensive).json  Green_Circuit_-_Expensive_-_Moduled_-_Bot_Mike.json  Mining - Compact, Large.json  Mining - Compact, Small.json  Multi-stage startup base and mall.json  Oil - Huge Pumpjack BP.json  Power Indicator with Alarm.json  Rails - Diagonal (with Green Wire and Lamps)(1).json  Rails - Diagonal (with Green Wire and Lamps).json  Rails - Giant 4-lane cross - Nilaus.json  Rails - In RHD.json  Rails - Out RHD.json  Rails - Parking - 90_ Curved Section Left (x6).json  Rails - Parking - 90_ Curved Section Right (x6).json  Rails - Parking - 90_ Middle Section (6cars x6).json  Rails - Parking - Diagonal Left 6cars x6.json  Rails - Parking - Diagonal Right 6cars x6.json  Rails - Parking - Straight Left 6cars x6.json  Rails - Parking - Straight Right 6cars x6.json  Rails - Straight RHD (with Green Wire and Lamps).json  Rails - T-Junction RHD.json  Red Circuits - (Expensive, Mid-Game).json  Station - Solar Loading.json  Station - Solar Unloading.json  Station - Wall Repair.json  Tileable Science Production 0-17 - Early to Mid.json  (+2 more)
src/: FactorioZygote.hs  Prelude.hs
